<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E6000000"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_root">

    <ImageView
        android:id="@+id/iv_top_bar"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_5sdp"
        android:src="@drawable/top_bar"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_white_curve_top_corners"
        app:layout_constraintTop_toBottomOf="@id/iv_top_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_verify_your_mobile_no"
            style="@style/styleTextBlack"
            android:text="@string/verify_mobile_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_enter_digits"
            style="@style/styleTextGrey"
            android:textSize="@dimen/text_medium"
            android:text="@string/enter_digits_otp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verify_your_mobile_no"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/bg_grey_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_digits"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/et_otp"
                android:layout_height="@dimen/_20sdp"
                style="@style/styleTextGrey"
                android:hint="000 - 000"
                android:background="@color/transparent"
                android:letterSpacing="0.2"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_error_enter_otp"
            style="@style/styleTextRed"
            android:text="@string/enter_your_otp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cl_otp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_enter_otp">

            <TextView
                android:id="@+id/tv_didnt_get"
                style="@style/styleTextGrey"
                android:textSize="@dimen/text_medium"
                android:text="@string/didnt_get_otp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_resend"
                style="@style/styleTextGreen"
                android:textSize="@dimen/text_medium"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/resend"
                app:layout_constraintLeft_toRightOf="@+id/tv_didnt_get"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_next"
            style="@style/styleButtonGreen"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/cl_resend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                style="@style/styleTextWhite"
                android:text="@string/next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/next_arrow"
                android:layout_marginEnd="@dimen/_18sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>