<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_curve_top_corners">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/left_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_change_delivery_address"
            style="@style/styleTextBlack"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/change_delivery_address"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_location_name"
            style="@style/styleTextBlack"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_delivery_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_location_address"
            style="@style/styleTextGrey"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_adjust_pin"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_light_green_curve_corners"
            android:layout_gravity="center"
            android:elevation="@dimen/_3sdp">
            <TextView
                style="@style/styleTextWhite"
                android:text="@string/tap_to_adjust_pin"
                android:textSize="@dimen/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_home_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/cv_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp">

            <EditText
                style="@style/styleTextGrey"
                android:hint="@string/house_apt_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:inputType="number"
                android:background="@color/transparent"
                android:textSize="@dimen/text_small"
                android:textAlignment="textStart"
                android:gravity="center_vertical"
                tools:ignore="RtlCompat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="2"
            android:background="@color/light_grey"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <EditText
                style="@style/styleTextGrey"
                android:hint="@string/building_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:background="@color/transparent"
                android:textSize="@dimen/text_small"
                android:textAlignment="textStart"
                android:gravity="center_vertical"
                tools:ignore="RtlCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_street_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_weight="2"
        android:background="@color/light_grey"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/ll_home_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            style="@style/styleTextGrey"
            android:hint="@string/street_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/text_small"
            android:background="@color/transparent"
            android:textAlignment="textStart"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_district"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_weight="2"
        android:background="@color/light_grey"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_street_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            style="@style/styleTextGrey"
            android:hint="@string/district"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:background="@color/transparent"
            android:textSize="@dimen/text_small"
            android:textAlignment="textStart"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_landmark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_weight="2"
        android:background="@color/light_grey"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_district"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            style="@style/styleTextGrey"
            android:hint="@string/landmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:background="@color/transparent"
            android:textSize="@dimen/text_small"
            android:textAlignment="textStart"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/bt_update_address"
                style="@style/styleButtonGreen"
                android:text="@string/update_address"
                android:layout_marginTop="@dimen/_70sdp"
                app:layout_constraintTop_toBottomOf="@+id/cl_landmark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_remove_address"
                style="@style/styleTextRed"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/remove_address"
                app:layout_constraintTop_toBottomOf="@+id/bt_update_address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>