<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.welcome.WelcomeActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        android:background="@drawable/welcome_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:id="@+id/iv_ccc"
            android:layout_width="149dp"
            android:layout_height="69dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/welcome_screen_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_welcome"
           style="@style/styleTextWhite"
            android:layout_width="@dimen/_188sdp"
            android:layout_height="@dimen/_58sdp"
            android:textSize="@dimen/text_large1"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/welcome_to_the_shopping_mall"
            app:layout_constraintBottom_toTopOf="@+id/tv_order_a_wide_range"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_order_a_wide_range"
            style="@style/styleTextWhite"
            android:layout_width="@dimen/_292sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/text_large"
            android:textAlignment="center"
            android:text="@string/order_a_wide_range_of"
            app:layout_constraintBottom_toTopOf="@+id/dots_indicator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_4sdp"
            app:dotsColor="@color/white"
            app:dotsCornerRadius="@dimen/_5sdp"
            app:dotsSize="@dimen/_5sdp"
            app:dotsSpacing="@dimen/_3sdp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="@color/text_green"
            app:progressMode="true"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/bt_get_started"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/bt_get_started"
            style="@style/styleButtonGreen"
            android:text="@string/get_started"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_skip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_skip"
            style="@style/styleTextWhite"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_16sdp"
            android:textSize="@dimen/text_medium"
            android:textAlignment="center"
            android:text="@string/skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>